--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -904,8 +904,8 @@ footer {
     }
 
     .photo-placeholder {
-        width: 150px;
-        height: 150px;
+        width: 100%;
+        height: 200px;
     }
     
     .tagline {
@@ -921,3 +921,4 @@ footer {
         grid-template-columns: 1fr;
     }
 }
+
